--- a/.github/workflows/yarn-publish.yml
+++ b/.github/workflows/yarn-publish.yml
@@ -14,12 +14,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
+          node-version: '16.x'
+          registry-url: 'https://registry.npmjs.org/'
+          always-auth: true
       - run: yarn --frozen-lockfile
       - run: yarn build
       - run: yarn npm publish --access public
         env:
+          NPM_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   publish-gpr:
@@ -31,10 +33,13 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16
-          registry-url: https://npm.pkg.github.com/
+          node-version: '16.x'
+          registry-url: 'https://npm.pkg.github.com/'
+          always-auth: true
       - run: yarn --frozen-lockfile
       - run: yarn build         
       - run: yarn npm publish
         env:
+          NPM_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           
