--- a/.github/workflows/yarn-publish.yml
+++ b/.github/workflows/yarn-publish.yml
@@ -32,6 +32,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16.x'
+          scope: '@sebinsua'
       - run: yarn --frozen-lockfile
       - run: yarn build         
       - run: |
